--- a/welovetour/css/style.css
+++ b/welovetour/css/style.css
@@ -99,7 +99,7 @@ p.social_box a:hover{ background-color: #fff; }
 .HeaderBox p.social_box{ padding-top: 36px; }
 
 /*Main_Contents*/
-.Main_Contents{ width: 100%; background-color: #fff;}
+.Main_Contents{ width: 100%; background-color: #fff; overflow-x: hidden;}
 
 .Main_Contents .main_banner{ width: 100%; height: 600px; background: url(../images/banner/index-banner1.jpg) center center no-repeat; background-size: cover; }
 .Main_Contents .travel_date_departure{ width: 100%; }
@@ -141,7 +141,7 @@ p.social_box a:hover{ background-color: #fff; }
 .Main_Contents h4.sub_title{ font-size: 28px; color: #d1ab1b; padding: 15px 0; }
 .Main_Contents p.description{ font-size: 18px; text-align: justify; line-height: 27px;}
 
-.Main_Contents .travel_itineraries{ width: 100%; overflow-x: hidden;}
+.Main_Contents .travel_itineraries{ width: 100%; overflow: hidden;}
 .Main_Contents .travel_itineraries .bothbox{ float: left; width: 50%; }
 
 .Main_Contents .travel_itineraries .info_box{ max-width: 550px; padding: 12px; margin: 0 auto; }
@@ -149,7 +149,7 @@ p.social_box a:hover{ background-color: #fff; }
 .Main_Contents .travel_itineraries .youtube_box{ text-align: center; padding: 15px 0 25px 0; }
 .Main_Contents .travel_itineraries .youtube_box iframe{ display: inline-block; width: 100%; max-width:560px; height:315px; }
 
-.Main_Contents .travel_itinerary{ width: 100%; overflow-x: hidden; }
+.Main_Contents .travel_itinerary{ width: 100%; overflow: hidden; }
 .Main_Contents .top_title_line{ text-align: center; padding: 30px 0; position: relative;}
 .Main_Contents .top_title_line::before{ content: ""; position: absolute; width: calc(50% - 120px); top: 50%; left: 0; display: block; height: 1px; border-top: 1px solid #c0c0c0; }
 .Main_Contents .top_title_line::after{ content: ""; position: absolute; width: calc(50% - 120px); top: 50%; right: 0; display: block; height: 1px; border-top: 1px solid #c0c0c0; }
@@ -284,7 +284,7 @@ p.social_box a:hover{ background-color: #fff; }
 .FooterBox p.social_box a:hover{ background-color: #d1ab1b;}
 
 /*fixed right menu*/
-.fixed_go_menu{ position: fixed; right: 5%; bottom:calc(50% - 257px); z-index: 16; }
+.fixed_go_menu{ position: fixed; right: 5%; bottom:calc(50% - 257px); z-index: 16; animation: slideup 2s; -moz-animation: slideup 2s; -webkit-animation: slideup 2s;  -o-animation: slideup 2s;}
 .fixed_go_menu p.link{ color: #fff; text-align: center; font-size: 13px; background-color: #927400; border:2px solid #775e00; }
 .fixed_go_menu p.link a{ width:85px; height: 85px; color: #fff; display: block; padding-top: 68%; border-bottom: 2px solid #775e00; position: relative; cursor: pointer; }
 .fixed_go_menu p.link a:last-child{ border-bottom: none; }
